Cycles volume scattering shader crash #40836

Closed
opened 2014-06-27 10:49:47 +02:00 by Efflam Le Bivic · 15 comments

System Information
windows 7 64
nvidia quadro k2000m

Blender Version
Broken: 2.71

Short description of error
Blender crashes when trying to render a scene featuring volume scattering based material assigned to overlapping objects.

Exact steps for others to reproduce the error
crash_test.zip
open the file and press render or set camera viewport to rendered.
You do not get a crash IF :

  • you unplug the volume scattering shader in the Plastic material
  • you delete 2 of the 3 objects.
  • you move each object so they do not overlap.
**System Information** windows 7 64 nvidia quadro k2000m **Blender Version** Broken: 2.71 **Short description of error** Blender crashes when trying to render a scene featuring volume scattering based material assigned to overlapping objects. **Exact steps for others to reproduce the error** [crash_test.zip](https://archive.blender.org/developer/F95733/crash_test.zip) open the file and press render or set camera viewport to rendered. You do not get a crash IF : - you unplug the volume scattering shader in the Plastic material - you delete 2 of the 3 objects. - you move each object so they do not overlap.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @mokafix

Added subscriber: @mokafix

#40688 was marked as duplicate of this issue

#40688 was marked as duplicate of this issue
Sergey Sharybin self-assigned this 2014-06-27 10:50:55 +02:00

Added subscribers: @ThomasDinges, @brecht

Added subscribers: @ThomasDinges, @brecht

Also summoning @brecht and @ThomasDinges in case they're faster then me.

Also summoning @brecht and @ThomasDinges in case they're faster then me.

Developer note: the crash happens in the release and current Git when setting Volume Bounces to 1. Crash is caused by the numeric overflow in shadow_blocked when calculating max_hits.

Developer note: the crash happens in the release and current Git when setting Volume Bounces to 1. Crash is caused by the numeric overflow in `shadow_blocked` when calculating max_hits.

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

This is perhaps the same bug as #40688 ?

This is perhaps the same bug as #40688 ?

Added subscriber: @Mapper720-4

Added subscriber: @Mapper720-4

◀ Merged tasks: #40688.

◀ Merged tasks: #40688.

This issue was referenced by cb95544e41

This issue was referenced by cb95544e41864280cbf7df315ede5447f3a2a867

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit cb95544e41.

Closed by commit cb95544e41.

Added subscriber: @highstaker

Added subscriber: @highstaker

Just an addition.

You do NOT get a crash if

Render Settings -> Light Paths -> Bounces: Volume = 0

Just an addition. You do NOT get a crash if Render Settings -> Light Paths -> Bounces: Volume = 0
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40836
No description provided.